# dmss-poc

./: Cargo.toml  README.md
artifacts/capture_20260308T224623Z_main_pub/: analysis.txt  media_chunk_index.txt  play_response_headers.txt  summary.txt
artifacts/capture_20260308T224623Z_main_pub/analysis_artifacts/: ffprobe_validation.txt
artifacts/capture_20260308T224623Z_main_pub/analysis_artifacts/reference_oracle/: reference_comparison.txt
src/: bootstrap.rs  channel.rs  cloud.rs  lib.rs  logging.rs  login.rs  main.rs  play.rs  ptcp.rs  ptcp_flow.rs  stun.rs  traversal.rs
src/analyze/: core.rs  decrypt.rs  experiment.rs  mod.rs  model.rs  planner.rs  reference.rs  reference_pipeline.rs  report.rs  structure.rs  tests.rs  util.rs  validate.rs
src/analyze/experiments/: identity.rs  lane.rs  mod.rs  repeating.rs  xor.rs
