[package]
name = "dmss_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
async-trait = "0.1.89"
base64 = "0.21.7"
chrono = "0.4.42"
clap = { version = "4.5.37", features = ["derive"] }
hmac = "0.12.1"
md5 = "0.7.0"
ofb = "0.6.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
xml-rs = "0.8.27"
